fix nav background color for dark mode

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -280,7 +280,7 @@ pre.code-box {
     width: var(--nav-width);
     position: sticky;
     top: 0;
-    background-color: var(--sidebar-bg-color);
+    background-color: var(--bg-color);
     z-index: 10000;
 
     @media (min-width: $breakpoint-tablet) {
